# AUnitedai-orchestration

./: .gitignore  GSTACK_INTEGRATION.md  PROJECT_DOCUMENTATION.md  README.md  gui.py  main.py  pyproject.toml  test_median.py  worker_config.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
orchestrator/: # gstack.txt  agents.py  api.py  config.py  decision_memory.py  graph.py  gstack_extended.py  neural_network.py  redact_engine.py  skills.py  states.py  strix_skills.py  tools.py
scripts/: find_median.py  index_docs.py  process_image.py  test_apis.py
